# dml-diagnostic

./: .gitignore  CITATION.cff  LICENSE  README.md  draft.tex  ectj template empty for online supplement.tex  ectj template empty for paper and printed appendix.tex  ectj template with style instructions.tex  first.tex  online_supplement.tex  pyproject.toml  requirements-lock.txt  requirements.txt  run_all.py
code/: README.md  simulation_kappa_dml.ipynb
code/simulations/: __init__.py  core.py
dml_diagnostic/: README.md  __init__.py  diagnostics.py  estimator.py  plotting.py  reporting.py
dml_diagnostic/data/: __init__.py  lalonde.py
notebooks/: corrupted_oracle_analysis.ipynb  corrupted_oracle_analysis.py  empirical.ipynb  high_dimensional_study.ipynb  lalonde_application.ipynb  lalonde_application.py  simulation.ipynb
paper/: README.md  main.tex
results/: README.md  cell_summary.csv  corrupted_oracle_aggregates.csv  corrupted_oracle_results.csv  empirical_dml_results.csv  empirical_results.tex  exponent_diagnostic.csv  high_dim_cell_summary.csv  high_dim_simulation_results.csv  lalonde_baseline_results.csv  lalonde_results.csv  nonlinear_dgp_comparison.csv  opposite_sign_bias.csv  sample_size_sensitivity.csv  simulation_results.csv  simulation_results_full.csv  simulation_summary.csv  table1_design_summary.csv  table1_design_summary.tex  table2_coverage_by_regime.csv  table2_coverage_by_regime.tex
results/tables/: empirical_results.csv  high_dim_summary.csv
src/: data.py  dgp.py  dml.py  learners.py  tuning.py
src/dml_condition/: __init__.py  core.py
src/empirical/: README.md  __init__.py  data_lalonde.py  dml_kappa.py  empirical_application.ipynb  requirements.txt  utils_tables.py
