[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dml-diagnostic"
version = "1.0.0"
description = "Condition number diagnostics for Double Machine Learning"
readme = "README.md"
authors = [
    {name = "Gabriel Saco", email = "gsacoalvarado@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]
keywords = [
    "double machine learning",
    "causal inference",
    "condition number",
    "econometrics",
    "semiparametric estimation",
]
dependencies = [
    "numpy>=1.20",
    "pandas>=1.3",
    "scikit-learn>=1.0",
]

[project.optional-dependencies]
plotting = ["matplotlib>=3.4"]
full = ["matplotlib>=3.4", "scipy>=1.7"]
dev = ["pytest", "black", "mypy", "ruff"]

[project.urls]
Homepage = "https://github.com/gsaco/dml-diagnostic"
Documentation = "https://github.com/gsaco/dml-diagnostic#readme"
Repository = "https://github.com/gsaco/dml-diagnostic"

[tool.setuptools.packages.find]
where = ["."]
include = ["dml_diagnostic*"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
ignore = ["E501"]
